Correções da especificação 1 e adicionando elementos na especificação 2

--- a/docs/uc/especificacoes/01.md
+++ b/docs/uc/especificacoes/01.md
@@ -16,6 +16,7 @@ Caso de uso utilizado por refugiados para acessar um mapa da sua região, bem co
 - 09: Se o Usuário quiser filtrar os apoio de ONG's, caso de uso continua no FLUXO ALTERNATIVO A6;
 - 10: Usuário visualiza zonas de risco;
 - 11: Se o Usuário quiser traçar uma rota entre dois pontos do mapa, caso de uso continua na sessão de PONTOS DE EXTENSÃO;
+- Se houver algum erro de localização, sincronização de informações ou exibição de dados, caso de uso contina em FLUXOS DE EXCEÇÃO.
 - 12: Usuário busca outro recurso no aplicativo ou encerra a aplicação e o caso de uso termina.
 
 ## 3. FLUXOS ALTERNATIVOS
@@ -111,7 +112,7 @@ Após a execução do caso de uso, o sistema garante que:
 - O usuário pode buscar outra funcionalidade dentro do aplicativo ou encerrar sua sessão.  
 
 ## 7. PONTOS DE EXTENSÃO
-A especificação do FLUXO DE EXCEÇÃO 1, previsto neste caso de uso, podem ser acessadas em ESPECIFICAÇÃO DE CASO DE USO 2: TRAÇAR ROTA
+A especificação do FLUXO DE EXCEÇÃO 1, previsto neste caso de uso, podem ser acessadas em [ESPECIFICAÇÃO DE CASO DE USO 2: TRAÇAR ROTA](/uc/especificacoes/02/)
 
 ## 8. REQUISITOS ESPECIAIS
 São os requisitos especiais para que a especificação de caso de uso ACESSAR MAPA funcione adequadamente:
