--- a/docs/uc/especificacoes/02.md
+++ b/docs/uc/especificacoes/02.md
@@ -1,15 +1,39 @@
-# ESPECIFICAÇÃO DE CASO DE USO X: <NOME DO CASO DE USO>
+# ESPECIFICAÇÃO DE CASO DE USO 2: TRAÇAR ROTA
+
 VERSÃO 1.0
 
 ## 1. DESCRIÇÃO
+Caso de uso utilizado por refugiados para traçar rotas seguras entre dois pontos distintos em uma dada localização geográfica. Funcionalidade de inclusão da especificação de [ACESSAR MAPA](/uc/especificacoes/01/) bem como verificar rotas e acessar infirmações de transporte na sua localidade.
 
 ## 2. FLUXO BÁSICO DE EVENTOS
+- 01: Usuário está autenticado em sua conta no sistema;
+- 02: Usuário seleciona a opção de Mapa da aplicação;
+- 03: Usuário seleciona a opção "Traçar rota";
+- 04: Usuário fornece sua atual localização e a localização do ponto de chegada;
+- 05: O sistema traça uma rota entre a as localizações fornecidas;
+- 06: O sistema diponibiliza a localização dos pontos de transporte ao longo do trajeto traçado;
+- 07: Se o usuário estiver sem acesso à internet, o caso de uso continua em FLUXO ALTERNATIVO A1;
+- 08: Se o usuário quiser acessar as informações dos transportes que passam pelos apresentados pelo sistema ao longo da rota proposta, caso de uso continua na sessão FLUXO DE EXTENSÃO;
+- 09: O usuário segue a rota proposta pelo aplicativo para chegar na localização desejada;
+- 10: Usuário busca outro recurso no aplicativo ou encerra a aplicação e o caso de uso termina.
 
 ## 3. FLUXOS ALTERNATIVOS
 
-### 3.1. FLUXO ALTERNATIVO
+### A1: Usuário sem acesso à internet
 
-[...]
+A1.1: O usuário tenta traçar uma rota sem conexão ativa.
+
+- O sistema verifica se há mapas e rotas salvas no cache do dispositivo.
+- Se houver mapas e rotas disponíveis offline, o sistema permite o uso desses dados e continua o fluxo principal no passo 05.
+- Se não houver mapas e rotas disponíveis, o sistema traça a rota proposta, mas não acompanha a localização do usuário em tempo real.
+- O usuário pode seguir o trajeto ou tentar reconectar ou encerrar a funcionalidade.
+
+### A2: Destino inserido é inválido ou fora da área mapeada
+
+A2.1: O usuário insere um destino que não está cadastrado ou é inválido.
+
+- O sistema exibe uma mensagem informando que o local não pode ser encontrado.
+- O usuário pode tentar outro endereço ou cancelar a operação.
 
 ## 4. FLUXOS DE EXCEÇÃO
 
