--- a/docs/uc/especificacoes/01.md
+++ b/docs/uc/especificacoes/01.md
@@ -112,7 +112,7 @@ Após a execução do caso de uso, o sistema garante que:
 - O usuário pode buscar outra funcionalidade dentro do aplicativo ou encerrar sua sessão.  
 
 ## 7. PONTOS DE EXTENSÃO
-A especificação do FLUXO DE EXCEÇÃO 1, previsto neste caso de uso, podem ser acessadas em [ESPECIFICAÇÃO DE CASO DE USO 2: TRAÇAR ROTA](/uc/especificacoes/02/)
+A especificação do FLUXO DE EXCEÇÃO 1, previsto neste caso de uso, pode ser acessada em [ESPECIFICAÇÃO DE CASO DE USO 2: TRAÇAR ROTA](/uc/especificacoes/02/).
 
 ## 8. REQUISITOS ESPECIAIS
 São os requisitos especiais para que a especificação de caso de uso ACESSAR MAPA funcione adequadamente:
