--- a/docs/uc/especificacoes/02.md
+++ b/docs/uc/especificacoes/02.md
@@ -14,8 +14,10 @@ Caso de uso utilizado por refugiados para traçar rotas seguras entre dois ponto
 - 06: O sistema diponibiliza a localização dos pontos de transporte ao longo do trajeto traçado;
 - 07: Se o usuário estiver sem acesso à internet, o caso de uso continua em FLUXO ALTERNATIVO A1;
 - 08: Se o usuário quiser acessar as informações dos transportes que passam pelos apresentados pelo sistema ao longo da rota proposta, caso de uso continua na sessão FLUXO DE EXTENSÃO;
-- 09: O usuário segue a rota proposta pelo aplicativo para chegar na localização desejada;
-- 10: Usuário busca outro recurso no aplicativo ou encerra a aplicação e o caso de uso termina.
+- 09: Se o usuário quiser alterar a rota proposta e está sem internet, o caso de uso continua em FLUXO ALTERNATIVO A3.1;
+- 10: Se o usuário quiser alterar a rota proposta e está conectado à internet, o caso de uso continua em FLUXO ALTERNATIVO A3.2;
+- 11: O usuário segue a rota proposta pelo aplicativo para chegar na localização desejada;
+- 12: Usuário busca outro recurso no aplicativo ou encerra a aplicação e o caso de uso termina.
 
 ## 3. FLUXOS ALTERNATIVOS
 
@@ -24,7 +26,7 @@ Caso de uso utilizado por refugiados para traçar rotas seguras entre dois ponto
 A1.1: O usuário tenta traçar uma rota sem conexão ativa.
 
 - O sistema verifica se há mapas e rotas salvas no cache do dispositivo.
-- Se houver mapas e rotas disponíveis offline, o sistema permite o uso desses dados e continua o fluxo principal no passo 05.
+- Se houver mapas e rotas disponíveis offline, o sistema permite o uso desses dados e continua o fluxo principal no passo 09.
 - Se não houver mapas e rotas disponíveis, o sistema traça a rota proposta, mas não acompanha a localização do usuário em tempo real.
 - O usuário pode seguir o trajeto ou tentar reconectar ou encerrar a funcionalidade.
 
@@ -35,19 +37,61 @@ A2.1: O usuário insere um destino que não está cadastrado ou é inválido.
 - O sistema exibe uma mensagem informando que o local não pode ser encontrado.
 - O usuário pode tentar outro endereço ou cancelar a operação.
 
+### A3: Usuário altera a rota ao longo do percurso
+A3.1: Usuário altera a rota de destino ao longo do percurso, mas não está conectado à internet.
+
+- O sistema deixa disponível a opção de "Destino" ao longo trajeto do usuário pelo percurso que está sendo traçado;
+- O usuário altera o destino e o ponto de partida;
+- Caso de uso segue conforme o item 4 do fluxo básico desta especificação.
+
+A3.2: Usuário altera a tora de destino ao longo do percurso e está conectado a internet.
+
+- O sistema recalcula o novo trajeto conforme a localização em tempo real do usuário e o destino que foi estabelecido no início da rota.
+- Caso de uso segue conforme o item 4 do fluxo básico desta especificação.
+
 ## 4. FLUXOS DE EXCEÇÃO
 
-### 4.1. FLUXO DE EXSCEÇÃO 1
+### FLUXO DE EXCEÇÃO 1: Erros do banco de dados e sincronização
 
-[...]
+- Dados desatualizados são apresentados ao usuário devido à falta de sincronização com o servidor.  
+- O banco de dados está indisponível, impedindo a recuperação de informações sobre pontos de interesse.
+
+### FLUXO DE EXCEÇÃO 3: Erros na exibição do mapa e seus pontos
+
+- Mapa não carrega devido a falha na conexão com o servidor de mapas.  
+- Pontos de abrigo, assistência médica ou apoio de ONGs não são exibidos mesmo quando deveriam estar disponíveis.  
+- O usuário aplica filtros, mas os resultados exibidos não refletem corretamente os critérios selecionados.  
+- Zonas de risco não são exibidas corretamente ou estão desatualizadas.
+
 
 ## 5. PRÉ CONDIÇÃO
 
+Para que o sistema execute as funcionalidades previstas no caso de uso TRAÇAR ROTA, as seguintes condiçõs do sistema devem ser atendidas:
+
+- O sistema deve ter acesso à localização do usuário (caso esteja habilitada).
+- O sistema deve ter um banco de dados atualizado com informações de mapas e transportes.
+- Para funcionalidades online, o usuário deve estar conectado à internet.
+- Para funcionalidades offline, o sistema deve ter mapas e rotas salvas no cache do dispositivo.
+
 ## 6. PÓS CONDIÇÃO
 
+Após a execução do caso de uso, o sistema garante que:
+
+- O sistema exibe uma rota segura entre os pontos fornecidos.
+- O usuário pode visualizar pontos de transporte ao longo do trajeto.
+- Se o usuário não tiver conexão com a internet, ele pode acessar rotas offline (se disponíveis) ou seguir a rota sem acompanhamento em tempo real.
+- O usuário pode modificar a rota ao longo do percurso, com ou sem internet, conforme os fluxos alternativos.
+- Se o destino inserido for inválido ou estiver fora da área mapeada, o sistema informa o usuário e permite inserir um novo destino ou cancelar a operação.
+- O usuário pode encerrar a funcionalidade ou buscar outro recurso no aplicativo.
+
 ## 7. PONTOS DE EXTENSÃO
+As especificações do PONTO DE EXTENSÃO 1, previsto neste caso de uso, podem ser acessadas em [ESPECIFICAÇÃO DE CASO DE USO 3: VERIFICAR OPÇÕES DE TRANSPORTE](/uc/especificacoes/03/)
 
 ## 8. REQUISITOS ESPECIAIS
+São os requisitos especiais para que a especificação de caso de uso ACESSAR MAPA funcione adequadamente:
+
+- O sistema deve permitir o usuário acesse as informações offline;
+- O sistema deve realizar uma sincronização de informasões toda vez que o usuário estiver com acesso à internet.
 
 ## 9. INFORMAÇÕES ADICIONAIS
-
+Não há informações adicinais a serem trazidas nesta especificação.
