--- a/docs/uc/especificacoes/02.md
+++ b/docs/uc/especificacoes/02.md
@@ -3,7 +3,7 @@
 VERSÃO 1.0
 
 ## 1. DESCRIÇÃO
-Caso de uso utilizado por refugiados para traçar rotas seguras entre dois pontos distintos em uma dada localização geográfica. Funcionalidade de inclusão da especificação de [ACESSAR MAPA](/uc/especificacoes/01/) bem como verificar rotas e acessar infirmações de transporte na sua localidade.
+Caso de uso utilizado por refugiados para traçar rotas seguras entre dois pontos distintos em uma dada localização geográfica. Funcionalidade de inclusão da especificação de [ACESSAR MAPA](/uc/especificacoes/01/) bem como verificar rotas e acessar informações de transporte na sua localidade.
 
 ## 2. FLUXO BÁSICO DE EVENTOS
 - 01: Usuário está autenticado em sua conta no sistema;
@@ -91,7 +91,7 @@ As especificações do PONTO DE EXTENSÃO 1, previsto neste caso de uso, podem s
 São os requisitos especiais para que a especificação de caso de uso ACESSAR MAPA funcione adequadamente:
 
 - O sistema deve permitir o usuário acesse as informações offline;
-- O sistema deve realizar uma sincronização de informasões toda vez que o usuário estiver com acesso à internet.
+- O sistema deve realizar uma sincronização de informações toda vez que o usuário estiver com acesso à internet.
 
 ## 9. INFORMAÇÕES ADICIONAIS
 Não há informações adicinais a serem trazidas nesta especificação.
