--- a/docs/uc/especificacoes/03.md
+++ b/docs/uc/especificacoes/03.md
@@ -37,7 +37,7 @@ Caso de uso utilizado por refugiados para traçar rotas seguras entre dois ponto
 
 ## 4. FLUXOS DE EXCEÇÃO
 
-### FLUZO DE EXCEÇÃO 1: Erros de processamento de dados 
+### FLUXO DE EXCEÇÃO 1: Erros de processamento de dados 
 
 - Caso ocorra algum erro no processamento dos dados de transporte (como horários incorretos ou falha de sincronização), 
 - Os dados exibidos para o usuário podem ser imprecisos, comprometendo a confiança no sistema.
@@ -70,7 +70,7 @@ Não há pontos de extensão a serem trazidas nesta especificação.
 São os requisitos especiais para que a especificação de caso de uso VERIFICAR OPÇÕES DE TRANSPORTE funcione adequadamente:
 
 - O sistema deve permitir o usuário acesse as informações offline;
-- O sistema deve realizar uma sincronização de informasões toda vez que o usuário estiver com acesso à internet.
+- O sistema deve realizar uma sincronização de informações toda vez que o usuário estiver com acesso à internet.
 
 ## 9. INFORMAÇÕES ADICIONAIS
 
