--- a/docs/uc/especificacoes/04.md
+++ b/docs/uc/especificacoes/04.md
@@ -1,4 +1,4 @@
-# ESPECIFICAÇÃO DE CASO DE USO X: Acessar Vagas de emprego
+# ESPECIFICAÇÃO DE CASO DE USO 4: ACESSAR VAGAS DE EMPREGO
 VERSÃO 1.0
 
 ## 1. DESCRIÇÃO
