--- a/docs/uc/especificacoes/05.md
+++ b/docs/uc/especificacoes/05.md
@@ -1,4 +1,4 @@
-# ESPECIFICAÇÃO DE CASO DE USO: ACESSAR BENEFÍCIOS
+# ESPECIFICAÇÃO DE CASO DE USO 5: ACESSAR BENEFÍCIOS
 VERSÃO 1.0
 
 ## 1. DESCRIÇÃO
