--- a/docs/uc/especificacoes/06.md
+++ b/docs/uc/especificacoes/06.md
@@ -1,4 +1,4 @@
-# ESPECIFICAÇÃO DE CASO DE USO: VERIFICAR ASSISTÊNCIA MÉDICA
+# ESPECIFICAÇÃO DE CASO DE USO 6: VERIFICAR ASSISTÊNCIA MÉDICA
 VERSÃO 1.0
 
 ## 1. DESCRIÇÃO
